tests/baselines/reference/parserErrorRecovery_ObjectLiteral4.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ObjectLiterals/parserErrorRecovery_ObjectLiteral4.ts (2 errors) ====
    var v = { a: 1
    return;
    ~~~~~~
!!! error TS1005: ',' expected.
          ~
!!! error TS1005: ':' expected.